--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
     "compilerOptions": {
-        "module": "commonjs"
+        "module": "commonjs",
+        "target": "ES2020",
+        "esModuleInterop": true,
+        "strict": true,
+        "outDir": "./dist",
+        "moduleResolution": "node",
+        "types": [
+            "node"
+        ]
     }
 }
