--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,19 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "CommonJS",
         "target": "ES2020",
         "esModuleInterop": true,
         "strict": true,
-        "outDir": "./dist",
+        "outDir": "dist",
         "moduleResolution": "node",
         "types": [
             "node"
         ]
-    }
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
