Broke shopping cart scenarios into separate feature and pom files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Repository for the second focus area",
   "main": "index.js",
   "scripts": {
-    "cucumber": "cucumber-js --config config/cucumber.json"
+    "pretest": "ts-node src/setup/setupAuth.ts",
+    "test": "cucumber-js --config config/cucumber.json"
   },
   "keywords": [],
   "author": "",
