Updated the paths in package.json to be able to run all or individual feature files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "pretest": "ts-node src/setup/setupAuth.ts",
-    "test": "cucumber-js --config config/cucumber.json"
+    "test": "cucumber-js src/tests/features --config config/cucumber.json",
+    "pretest:feature": "ts-node src/setup/setupAuth.ts",
+    "test:feature": "cucumber-js --config config/cucumber.json"
   },
   "keywords": [],
   "author": "",
