--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@cucumber/cucumber": "^12.2.0",
     "@playwright/test": "^1.55.0",
+    "@types/faker": "^5.5.3",
     "@types/node": "^24.1.0",
+    "faker": "^5.5.3",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
