Converted cucumber.json file to js and updated scripts to use baseUrl

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "pretest": "ts-node src/setup/setupAuth.ts",
-    "test": "cucumber-js src/tests/features --config config/cucumber.json",
+    "test": "cucumber-js src/tests/features --config config/cucumber.js",
     "pretest:feature": "ts-node src/setup/setupAuth.ts",
-    "test:feature": "cucumber-js --config config/cucumber.json"
+    "test:feature": "cucumber-js --config config/cucumber.js"
   },
   "keywords": [],
   "author": "",
