--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "pretest": "ts-node src/setup/setupAuth.ts",
     "test": "cucumber-js src/tests/features --config config/cucumber.js",
     "pretest:feature": "ts-node src/setup/setupAuth.ts",
-    "test:feature": "cucumber-js --config config/cucumber.js"
+    "test:feature": "cucumber-js --config config/cucumber.js",
+    "dryrun": "cucumber-js src/tests/features --dry-run --config config/cucumber.js"
   },
   "keywords": [],
   "author": "",
